# laik

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Guidelines.md  MAPlots.m  Makefile  Makefile.common  README.in  README.in1  README.in2  README.md  TODO.md  a.out  compile-dependencies.sh  configure  convertSequence.m  laik.files  laik.includes  massif.out.6851  massif.out.6852  massif.out.6853  massif.out.6854  meson-readme.md  meson.build  meson_options.txt  renderSequence.m  renderSequenceRGB.m  renderTimeline.asv  renderTimeline.m  renderTimeline.py  run_experiments.sh  run_supermuc_setup.sh  supermuc_setup.sh  supermuc_tools.sh  test_getfailed.c  update-version.sh
doc/: .gitignore  CMakeLists.txt  Debugging.md  Doxyfile  Makefile  Overview.md  TODO.md  building-with-openmp.md  cmake-readme.md  index.md  meson.build  tutorial-jacobi2d.md  tutorial-spmv.md
doc/design/: Layouts.md  Mapping.md
examples/: .gitignore  CMakeLists.txt  Makefile  README-example.c  README.md  TODO.md  jac1d.c  jac2d-ser.c  jac2d.c  jac3d-ll.c  jac3d.c  markov-ser.c  markov.c  markov2.c  meson.build  min.c  overlapping_memory_usage  overlapping_memory_usage.c  ping_pong.c  propagation1d.c  propagation2d.c  raytracer.cpp  resize.c  spmv.c  spmv2.c  vsum.c  vsum2.c  vsum3.c
examples/c++/: .gitignore  Makefile  raytracer.cpp
examples/fault-tolerance/: CMakeLists.txt  checkpoint-jac2d-recovery.c  checkpoint-mandelbrot-recovery.c  fault_tolerance_test.h  fault_tolerance_test_hash.h
examples/hpcscripts/: jac3d.sbatch  markov.sbatch
src/: CMakeLists.txt  action.c  backend-fabric.c  backend-mpi-dynamic.c  backend-mpi.c  backend-shmem.c  backend-single.c  backend-tcp2.c  backend-ulfm.c  backend.c  core.c  data-internal.h  data.c  debug.c  external.c  kvs.c  laik-backend-mpi.c  laik-backend-single.c  laik-backend.c  laik-core.c  laik-data.c  laik-ext-mqtt.c  laik-external.c  laik-internal.h  laik-program.c  laik-space.c  laik.c  layout.c  layout_lex.c  logging.c  meson.build  partitioner.c  partitioning.c  profiling-internal.h  profiling.c  program.c  rangelist.c  revinfo.c  shmem  shmem.c  (+5 more)
src/fault-tolerance/: checkpoint.c  failure_detector.c
tests/: .gitignore  CMakeLists.txt  Makefile  meson.build  run_example_test.sh  test-jac1d-100-single.sh  test-jac1d-1000-repart-single.sh  test-jac1d-repart.expected  test-jac1d.expected  test-jac2d-1000-single.sh  test-jac2d-1000.expected  test-jac3d-100-single.sh  test-jac3d.expected  test-jac3dr-100-single.sh  test-kvstest-single.sh  test-kvstest.expected  test-locationtest-single.sh  test-markov-20-4-single.sh  test-markov.expected  test-markov2-20-4-single.sh  test-markov2-20-4.expected  test-markov2-f-500-5-single.sh  test-markov2-f-500-5.expected  test-propagation2d-10-single.sh  test-propagation2d-10.expected  test-propagation2d-100.expected  test-spacestest-single.sh  test-spmv-single.sh  test-spmv.expected  test-spmv2-single.sh  test-spmv2.expected  test-spmv2r-single.sh  test-vsum-log-single.sh  test-vsum-single.sh  test-vsum2-single.sh  test-vsum3-single.sh
tests/common/: test-jac1d-1.sh  test-jac1d-4.expected  test-jac1d-4.sh  test-jac1d-repart-1.expected  test-jac1d-repart-1.sh  test-jac1d-repart-4.expected  test-jac1d-repart-4.sh  test-jac2d-1.expected  test-jac2d-1.sh  test-jac2d-4.expected  test-jac2d-4.sh  test-jac2d-gen-4.sh  test-jac2d-noc-4.expected  test-jac2d-noc-4.sh  test-jac3d-1.expected  test-jac3d-1.sh  test-jac3d-4.expected  test-jac3d-4.sh  test-jac3d-gen-4.sh  test-jac3d-gx3-4.expected  test-jac3d-noc-4.expected  test-jac3d-noc-4.sh  test-jac3d-rgx3-4.sh  test-jac3da-1.sh  test-jac3da-4.sh  test-jac3dar-1.sh  test-jac3dar-4.sh  test-jac3dari-4.sh  test-jac3de-1.sh  test-jac3de-4.sh  test-jac3der-1.sh  test-jac3der-4.sh  test-jac3deri-4.sh  test-jac3di-4.expected  test-jac3dr-1.sh  test-jac3dr-4.sh  test-jac3dr-noc-4.sh  test-jac3dri-4.sh  test-kvstest-1.sh  test-kvstest-4.sh  (+32 more)
tests/fabric/: launcher  mycmp  run-all.sh  test-jac1d-resize-2-2.sh  test-jac1d-resize-4-r12.sh  test-resize-2-2.sh  test-resize-2-s1-r1.sh  test-resize-3-r1.sh  test-resize-3-r12.sh  test-vsum3-2-2.sh  test-vsum3-2-s1-r1.expected  test-vsum3-2-s1-r1.sh  test-vsum3-3-r1.sh  test-vsum3-3-r12.sh
tests/fault-tolerance/: CMakeLists.txt  Makefile  checkpoint-jac2d-recovery-mpi-output.sh  checkpoint-jac2d-recovery-mpi.sh  checkpoint-jac2d-recovery-wsl.sh  checkpoint-jac2d-recovery.c  checkpoint-jac2d-recovery.sh  checkpoint-jac2d.c  checkpoint-mandelbrot-recovery.c  checkpoint-partitioner.c  checkpoint.c  checkpoint.sh  checkpoint_jac2d.sh  checkpoint_partitioner.c  checkpoint_partitioner.sh  checkpoint_partitioner_mpi.sh  fault_tolerance_test.h  fault_tolerance_test_hash.h  fault_tolerance_test_output.h  launcher.sh  test-jac2d-1000-ft.expected  test-jac2d-1000-ft.sh  test-lulesh-ft.expected  test-lulesh-ft.sh
tests/mpi/: CMakeLists.txt  Makefile  meson.build  test-jac1d-100-mpi-1.sh  test-jac1d-100-mpi-4.sh  test-jac1d-100.expected  test-jac1d-1000-repart-mpi-1.sh  test-jac1d-1000-repart-mpi-4.sh  test-jac1d-1000-repart.expected  test-jac1d-repart.expected  test-jac1d.expected  test-jac2d-1000-mpi-1.sh  test-jac2d-1000-mpi-4.sh  test-jac2d-1000.expected  test-jac2d-gen-1000-mpi-4.sh  test-jac2d-gencopy-1000-mpi-4.sh  test-jac2dn-1000-mpi-4.sh  test-jac2dn-1000.expected  test-jac3d-100-mpi-1.sh  test-jac3d-100-mpi-4.sh  test-jac3d-100.expected  test-jac3d-gen-100-mpi-4.sh  test-jac3d-gx3-100.expected  test-jac3d-rgx3-100-mpi-4.sh  test-jac3da-100-mpi-1.sh  test-jac3da-100-mpi-4.sh  test-jac3dar-100-mpi-1.sh  test-jac3dar-100-mpi-4.sh  test-jac3dari-100-mpi-4.sh  test-jac3de-100-mpi-1.sh  test-jac3de-100-mpi-4.sh  test-jac3der-100-mpi-1.sh  test-jac3der-100-mpi-4.sh  test-jac3deri-100-mpi-4.sh  test-jac3di-100.expected  (+40 more)
tests/mpi-dynamic/: mpidynrun  test-jac1d-resize-2-2.sh  test-jac1d-resize-4-r2.sh  test-resize-2-2.sh  test-resize-2-s1-r1.expected  test-resize-2-s1-r1.sh  test-resize-3-r1.sh  test-resize-3-r2.expected  test-resize-3-r2.sh  test-resize.sh  test-vsum3-2-2.sh  test-vsum3-2-s1-r1.sh  test-vsum3-3-r1.sh  test-vsum3-3-r2.sh
(+290 files in other folders)
